deployment/customer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gateway
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: gateway
    spec:
      containers:
        - image: ghcr.io/sbk-cloud-services/gateway:latest
          imagePullPolicy: ""
          name: gateway
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
